--- a/Booking.html
+++ b/Booking.html
@@ -3,63 +3,138 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Booking</title>
     <link rel="stylesheet" href="Booking.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   </head>
   <body>
-    <nav class="navbar">
-      <div class="container">
-        <ul>
-          <li id="logo"><a href="#home">Craftvilla</a></li>
-          <li class="item 1"><a href="#verksted">Verkstedet</a></li>
-          <li class="item 2"><a href="#tilbakemelding/">Tilbakemelding</a></li>
-          <li class="item 3"><a href="#galleri">Galleri</a></li>
-        </ul>
-        <a href="#booking" class="item 4">Bestill verkstedet dit</a>
-      </div>
-    </nav>
-    <div class="BG-container">
-      <h1>BESTILL NÅ!</h1>
-      <ul class="cards">
-        <li class="card 1">
-          <img
-            src="./Asset/pexels-viridianaor-14859095.jpg"
-            alt="Mosiak workshop"
-          />
-          <p>
-            Mosiak Kunst Sett inkluderer: Ramme, A4 størrelse treplate, små
-            fargede steiner, gummi.
-          </p>
-          <p>400 kr</p>
-          <button>Bestill</button>
-        </li>
-        <li class="card 2">
-          <img
-            src="./Asset/pexels-greta-hoffman-7858865.jpg"
-            alt="Akvarellmaling workshop"
-          />
-          <p>
-            Akvarellmaling - Sett inkluderer: Ramme, akvarellpapir med
-            designmal, akvarellfarger, pensler.
-          </p>
-          <p>200 kr</p>
-          <button>Bestill</button>
-        </li>
-        <li class="card 3">
-          <img
-            src="./Asset/pexels-viridianaor-14859095.jpg"
-            alt="Lerretsmaling workshop"
-          />
-          <p>
-            Lerretsmaling -  Sett inkluderer: Ramme, akrylpapir med
-            designmal, akrylfarger, pensler.
-          </p>
-          <p>300 kr</p>
-          <button>Bestill</button>
-        </li>
-      </ul>
-    </div>
+    <main>
+      <header>
+        <nav class="navbar" >
+          <div class="container">
+            <ul>
+              <li class="item0"><a href="/index.html">Craftvilla</a></li>
+              <li class="item1"><a href="/index.html#verksted">Verkstedet</a></li>
+              <li class="item2">
+                <a href="/Tilbake.html">Tilbakemelding</a>
+              </li>
+              <li class="item3"><a href="/Gallery.html">Galleri</a></li>
+              <li class="item4">
+                <a href="/Booking.html">Bestill verkstedet ditt</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
 
-    <div><form action=""></form></div>
+        <h1 class="bestill">Bestill nå!</h1>
+
+        <section class="verkstedet" id="verksted" >
+          <div class="boxes-3">
+            <div class="container-item1" id="mosiak">
+              <img
+                src="./Asset/pexels-viridianaor-14859095.jpg"
+                alt="Mosiak verksted"
+              />
+              <p>
+                Mosiak Kunst sett inkluderer:
+                <br />Ramme, A4 størrelse treplate, små fargede steiner, gummi.
+              </p>
+              <br />
+              <p>400NOK</p>
+            </div>
+            <div class="container-item2" id="akvarellmaling">
+              <img
+                src="./Asset/pexels-greta-hoffman-7858865.jpg"
+                alt="Akvarellmaling"
+              />
+              <p>
+                Akvarellmaling sett inkluderer:
+                <br />
+                Ramme, akvarellpapir med designmal, akvarellfarger, pensler.
+              </p>
+              <br />
+              <p>200NOK</p>
+            </div>
+            <div class="container-item3" id="lerret">
+              <img src="./Asset/redhat.png" alt="Lerretsmaling verkstedet" />
+              <p>
+                Lerretsmaling sett inkluderer:
+                <br />
+                Ramme, akrylpapir med designmal, akrylfarger, pensler.
+              </p>
+              <br />
+              <p>300NOK</p>
+            </div>
+          </div>
+        </section>
+  
+
+
+      <form class="form">
+      <div class="form-items">
+        <label for="fname">Fornavn:</label>
+        <input type="text" id="fname" name="fname" value="">
+      </div>
+      <div class="form-items">
+        <label for="lname">Etternavn:</label>
+        <input type="text" id="lname" name="lname" value="">
+       </div>
+        
+       <div class="form-items">
+        <label for="email">E-mail:</label>
+        <input type="email" id="email" name="email" value="">
+      </div>
+
+      <div class="form-items">
+        <label for="telefon">Telefon:</label>
+        <input type="text" id="telefon" name="telefon" value="">
+      </div>
+
+<div class="form-items">
+<label for="verksted">Velg verksted:</label>
+  <select name="Velg verksted:" id="Velg verksted:">
+    <option value="mosiak">Mosiak Kunst </option>
+    <option value="akvarellmaling">Akvarellmaling</option>
+    <option value="lerretmaling">Lerretsmaling</option>
+  </select>
+</div>
+
+<div class="form-items">
+  <label for="dato">Dato og klokkeslett:</label>
+  <input type="datetime-local" id="dato" name="dato">
+  </div>
+<div class="form-items">
+    <label for="antall">Antall deltager person(er):</label> 
+    <input type="number" min="0" id="antall" name="antall" value="">   
+</div>
+<div class="form-items">
+  <label for="spisiell">Spesiell ønsker:</label>
+  <textarea id="spisiell" name="spisiell" rows="10" cols="50"></textarea>
+</div>
+
+  <button type="button" onclick="alert('Takk for påmelding. Vi ses snart!')">Send</button>
+
+      </form>
+
+
+      <footer>
+        <div class="container-foot1">
+          CRAFTVILLA <br />
+          Sverresgate 20 <br />
+          3801 <br />
+          PORSGRUNN
+        </div>
+        <div class="container-foot2" id="icon-foot">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-instagram"></a>
+          <a href="#" class="fa fa-youtube"></a>
+        
+        </div>
+        <div class="container-foot3">
+          <p>All rights reserved CRAFTVILLA 2025</p>
+        </div>
+      </footer>
+    </main>
   </body>
 </html>
